--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
         .name,.age,.address,.friend{
             width: 100px;
             height: 100px;
-            background-color: red;
+            background-color: blue;
         }
     </style>
 </head>
