--- a/01_browser/09_shopping/index.html
+++ b/01_browser/09_shopping/index.html
@@ -20,11 +20,15 @@
                     <i class="fa-solid fa-trash-can"></i>
                 </button>
             </div>
+            <div class="item__divider"></div>
            </li>
         </ul>
         <footer class="footer">
             <input type="text" class="footer__input" />
-            <i class="fa-solid fa-plus"></i>
+            <button class="footer__button">
+                <i class="fa-solid fa-plus"></i>
+            </button>
+            
         </footer>
     </section>
 </body>
