--- a/01_browser/10_event/event-delegation.html
+++ b/01_browser/10_event/event-delegation.html
@@ -31,13 +31,14 @@
       //     li.classList.add('selected');
       //   });
       // });
-
+      
       // Coooooooool 🙌
       const ul = document.querySelector('ul');
       ul.addEventListener('click', event => {
         if (event.target.tagName == 'LI') {
           event.target.classList.add('selected');
         }
+        console.log(event.target.tagName);
       });
     </script>
   </body>
