--- a/01_browser/09_shopping/index.html
+++ b/01_browser/09_shopping/index.html
@@ -13,7 +13,7 @@
     <section class="list">
         <header class="header">Shopping List</header>
         <ul class="items">
-           <li class="item__row">
+           <!-- <li class="item__row">
             <div class="item">
                 <span class="item__name">Egg</span>
                 <button class="item__delete">
@@ -21,14 +21,15 @@
                 </button>
             </div>
             <div class="item__divider"></div>
-           </li>
+           </li> -->
         </ul>
         <footer class="footer">
-            <input type="text" class="footer__input" />
-            <button class="footer__button">
-                <i class="fa-solid fa-plus"></i>
-            </button>
-            
+            <form class="new-form">
+                <input type="text" class="footer__input" />
+                <button type="submit" class="footer__button">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
+            </form>
         </footer>
     </section>
 </body>
