--- a/01_browser/11_carrot_game/index.html
+++ b/01_browser/11_carrot_game/index.html
@@ -10,28 +10,23 @@
     <script src="https://kit.fontawesome.com/f4734a2372.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-   <div class="panel">
+  <section class="game">
+    <header class="game__header">
+        <button class="game__button">
+            <i class="fas fa-play"></i>
+        </button>
+        <span class="game__timer">0:0</span>
+        <span class="game__score">9</span>
+    </header>
+    <section class="game__field"></section>
+  </section>
 
-    <section class="timer">
-       <span class="timerText">00:11</span> 
-    </section>
-    <section class="remain">
-       <div class="remainCircle">
-        <span class="remainText">10</span>
-       </div>
-    </section>
-
-     
-    <section class="finished">
-        <div class="finishedBox">
-            <i class="fa-solid fa-arrow-rotate-right"></i>
-            <span class="finishedText">YOU LOST</span>
-        </div>
-    </section>
-   
-
-
-   </div>
+  <section class="pop-up pop-up__hide">
+    <button class="pop-up__refresh">
+        <i class="fas fa-redo"></i>
+    </button>
+    <span class="pop-up__message">Hello</span>
+  </section>
    
 </body>
 </html>
