--- a/01_browser/11_carrot_game/index.html
+++ b/01_browser/11_carrot_game/index.html
@@ -26,7 +26,9 @@
         <i class="fas fa-redo"></i>
     </button>
     <span class="pop-up__message">Hello</span>
-  </section>
+    <img src="img/sunyeop.jpg" alt="sunyeop" class="sunyeop">
+  </section> 
    
+ 
 </body>
 </html>
