--- a/01_browser/11_carrot_game/index.html
+++ b/01_browser/11_carrot_game/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find carrot</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
-    <script src="https://kit.fontawesome.com/f4734a2372.js" crossorigin="anonymous" defer></script>
+    <link rel="stylesheet" href="style.css">    
+    <script type="module" src="source/main.js" defer></script>
+    <script 
+      src="https://kit.fontawesome.com/f4734a2372.js" 
+      crossorigin="anonymous" 
+    ></script>
+    
 </head>
 <body>
   <section class="game">
